--- a/cover-letter.tex
+++ b/cover-letter.tex
@@ -32,7 +32,10 @@ e-mail: jean.ragusa@tamu.edu \vspace{0.5cm}}
          \vspace{0.25cm}
 %%%%%% More vertical space can be added here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Please find attached a copy of our manuscript titled ``lo ma'' for submission to the {\em Journal of Computational Physics}. 
+Please find attached a copy of our manuscript titled 
+``Entropy-based viscous regularization for the multi-dimensional Euler equations in low-Mach and transonic flows'' 
+for submission to {\em 
+Computers \& Fluids}. 
 
 In this paper, we propose  aaa. 
 
