div that should be a grad

--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -2072,7 +2072,7 @@ the research was carried out under the auspices the Idaho National Laboratory fo
 The entropy residual is defined as follows:
 %
 \begin{equation*}
-\resi(\vec{r},t) = \partial_t s (\vec{r},t) + \vec{u} \cdot \div s (\vec{r},t) ,
+\resi(\vec{r},t) = \partial_t s (\vec{r},t) + \vec{u} \cdot \grad s (\vec{r},t) ,
 \end{equation*}
 %
 where all variables were defined previously. This form of the entropy residual is not suitable for the low-Mach 
