--- a/cover-letter.tex
+++ b/cover-letter.tex
@@ -21,36 +21,34 @@ e-mail: jean.ragusa@tamu.edu \vspace{0.5cm}}
 
 \begin{document}
 
-\begin{letter}{Professor William Martin\\
+\begin{letter}{Dr. Patrick Bontoux\\
     Editor,\\
-    Journal of Computational Physics}
+    Computers \& Fluids}
 \date{\today}
 %%%%%% More vertical space can be added here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %         \vspace{3.0cm}
 
-\opening{Dear Professor Martin,}
+\opening{Dear Dr. Bontoux,}
          \vspace{0.25cm}
 %%%%%% More vertical space can be added here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Please find attached a copy of our manuscript titled 
 ``Entropy-based viscous regularization for the multi-dimensional Euler equations in low-Mach and transonic flows'' 
-for submission to {\em 
-Computers \& Fluids}. 
+for submission to {\em Computers \& Fluids}. 
 
-In this paper, we propose  aaa. 
+In this paper, 
+we present a new version of the entropy viscosity method that is well-suited to low-Mach flows.  Our alternate expressions for the entropy viscosity coefficients are derived using a low-Mach asymptotic study. 
+The new definitions are valid for a wide range of Mach numbers, from subsonic flows (with very low Mach  numbers) to supersonic flows, and no longer depend on an analytical expression for the entropy function. 
+The effectiveness of the method is demonstrated using various 1-D and 2-D benchmark tests. 
+Convergence studies are performed for both smooth solutions and solutions with shocks present.
 
 
-This work follows closely prior works by aaa adn extend them to aaaa.
-
-Our work is based on aaa.
-
-Several test cases, taken from the literature on discretizations of the aaa.
-
-Employing a CFEM approximation to solve the aaa.
+This work is an extension of the entropy viscosity method, a viscous regularization technique for hyperbolic conservation laws introduced by Guermond et al., 
+such that low-Mach but also supersonic flows can be handled by the technique.
 
 
 
-Thank you for considering this manuscript for publication in JCP.
+Thank you for considering this manuscript for publication in {\em Computers \& Fluids}.
 
 \vspace{0.25cm}
 
