the journal wants double spacing

--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -27,7 +27,7 @@
 %% SP 2008/03/01
 
 %\documentclass[preprint,12pt]{elsarticle}
-\documentclass[preprint,10pt]{elsarticle}
+\documentclass[review,10pt]{elsarticle}
 %\documentclass[final,3p,times]{elsarticle} 
 
 %% Use the option review to obtain double line spacing
@@ -68,6 +68,8 @@
 %% for the whole article with \linenumbers.
 \usepackage{lineno}
 \usepackage{cancel}
+\usepackage{setspace}
+\doublespacing
 
 \journal{Computers \& Fluids}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
