--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -282,3 +282,12 @@ Mechanic.",
   year    = "2003",
   }
   
+@Article{Saurel_2009,
+   author = "R.~Saurel and F.~Petitpas and R.~A.~Berry",
+   title = "Simple and efficient relaxation methods for interfaces separating compressible fluids, cavitating flows and shocks in multiphase mixtures",
+   year = 2009,
+   journal = "J. of Computational Physics",
+   volume = 228,
+   pages = "1678-1712",
+   publisher = "Elsevier"
+}
